argo/apps/fos-web-backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fos-web-deployment
  namespace: fos
spec:
  selector:
    matchLabels:
      app: fos-web
  template:
    metadata:
      labels:
        app: fos-web
    spec:
      imagePullSecrets:
        - name: fos-kubernetes-registry-credentials
      containers:
        - name: fos-web
          image: registry.digitalocean.com/dmn-kubernetes-registry/fos-web-backend:latest
          ports:
          - containerPort: 80
