argo/apps/fos-web-backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fos-web-service
  namespace: fos
  labels:
    app: fos-web
spec:
  selector:
    app: fos-web
  ports:
    - port: 80
